--- a/chrome/flying-focus.css
+++ b/chrome/flying-focus.css
@@ -10,6 +10,18 @@
 	pointer-events: none;
 	box-shadow: 0 0 2px 3px #78aeda, 0 0 2px #78aeda inset; border-radius: 2px;
 }
+#flying-focus-lines {
+	position: absolute;
+	left: 0;
+	top: 0;
+	visibility: hidden;
+	pointer-events: none;
+}
+#flying-focus-lines line {
+	stroke: #78aeda;
+	stroke-width: 2;
+}
+#flying-focus-lines.flying-focus_visible,
 #flying-focus.flying-focus_visible {
 	visibility: visible;
 	z-index: 9999;
