Opacity is not used.

--- a/chrome/flying-focus.css
+++ b/chrome/flying-focus.css
@@ -2,8 +2,8 @@
 	position: absolute;
 	margin: 0;
 	background: transparent;
-	-webkit-transition-property: left, top, width, height, opacity;
-	transition-property: left, top, width, height, opacity;
+	-webkit-transition-property: left, top, width, height;
+	transition-property: left, top, width, height;
 	-webkit-transition-timing-function: cubic-bezier(0, 0.2, 0, 1);
 	transition-timing-function: cubic-bezier(0, 0.2, 0, 1);
 	visibility: hidden;
